--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,18 @@
+xubuntu-artwork (0.40) lucid; urgency=low
+
+  * Test: switch from our ugly hack(tm)(r)(c) to gnome-settings-daemon for gdm:
+    - usr/share/gdm/autostart/LoginWindow/:
+      + xubuntu-gdm-{background-picture,settings-manager}.desktop: dropped
+    - debian/control: xubuntu-gdm-theme binary package:
+      + drop dependency on feh & recommendation on xfce4-settings
+      + recommends gnome-settings-daemon
+      + demotes xfce4-power-manager to Suggests
+    - debian/xubuntu-gdm-theme.gconf-defaults: set icon & gtk themes, re-enable
+      icons.
+  * debian/control: drop spurious conflicts breaking the iso build.
+
+ -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Tue, 15 Dec 2009 12:13:08 +0100
+
 xubuntu-artwork (0.39) lucid; urgency=low
 
   * debian/control:
