--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+xubuntu-artwork (10.04.3) UNRELEASED; urgency=low
+
+  * usr/share/pixmaps/xubuntu-logo-menu.{png,svg}: new version, should
+    be visible on white themes too. lp: #526660
+
+ -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Wed, 24 Feb 2010 21:14:05 +0100
+
 xubuntu-artwork (10.04.2) lucid; urgency=low
 
   * usr/share/pixmaps/xubuntu-logo-menu.{png,svg}: new menu icon, more visible
