* Add new package, xubuntu-plymouth-theme, recommended by xubuntu-artwork. * lib/, debian/xubuntu-plymouth-theme.*: added. * debian/copyright: updated.

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,9 @@ xubuntu-artwork (10.04.3) UNRELEASED; urgency=low
 
   * usr/share/pixmaps/xubuntu-logo-menu.{png,svg}: new version, should
     be visible on white themes too. lp: #526660
+  * Add new package, xubuntu-plymouth-theme, recommended by xubuntu-artwork.
+  * lib/, debian/xubuntu-plymouth-theme.*: added.
+  * debian/copyright: updated.
 
  -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Wed, 24 Feb 2010 21:14:05 +0100
 
