--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ xubuntu-artwork (10.04.3) UNRELEASED; urgency=low
   * Add new package, xubuntu-plymouth-theme, recommended by xubuntu-artwork.
   * lib/, debian/xubuntu-plymouth-theme.*: added.
   * Drop usplash theme.
+  * usr/share/themes/MurrinaXubuntu: dropped, not maintained by the artwork
+    team, was just a test.
   * debian/copyright: updated.
 
  -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Wed, 24 Feb 2010 21:14:05 +0100
