--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,9 @@ xubuntu-artwork (10.04.3) UNRELEASED; urgency=low
   * usr/share/themes/MurrinaXubuntu: dropped, not maintained by the artwork
     team, was just a test.
   * debian/copyright: updated.
+  * debian/control: xubuntu-gdm-theme: demotes xsplash to suggests, doesn't
+    interact well with xfce4-settings-helper, and doesn't seem actively
+    maintained anyway. lp: #531410
 
  -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Wed, 24 Feb 2010 21:14:05 +0100
 
