--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,23 @@
+xubuntu-artwork (10.04.3) lucid; urgency=low
+
+  * usr/share/pixmaps/xubuntu-logo-menu.{png,svg}: new version, should
+    be visible on white themes too (also temporary, new artwork on its way).
+    lp: #526660
+  * Add new package, xubuntu-plymouth-theme, recommended by xubuntu-artwork.
+  * lib/, debian/xubuntu-plymouth-theme.*: added, new *temporary* plymouth
+    theme, until the new artwork is ready (the letter 'x' isn't ready in
+    the new font ;).
+  * Drop usplash theme.
+  * usr/share/themes/MurrinaXubuntu: dropped, not maintained by the artwork
+    team, was just a test.
+  * debian/copyright: updated.
+  * debian/control: xubuntu-gdm-theme: demotes xsplash to suggests, doesn't
+    interact well with xfce4-settings-helper, and doesn't seem actively
+    maintained anyway. lp: #531410
+  * usr/share/xfce4/backdrops: dropped some old wallpapers again.
+
+ -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Sat, 06 Mar 2010 01:08:55 +0100
+
 xubuntu-artwork (10.04.2) lucid; urgency=low
 
   * usr/share/pixmaps/xubuntu-logo-menu.{png,svg}: new menu icon, more visible
