--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xubuntu-artwork (10.04.5) UNRELEASED; urgency=low
+
+  * xubuntu-plymouth-theme needs to depend on plymouth-label.
+
+ -- Steve Langasek <steve.langasek@ubuntu.com>  Mon, 05 Apr 2010 07:31:56 +0000
+
 xubuntu-artwork (10.04.4) lucid; urgency=low
 
   * Port xubuntu-plymouth-theme to the new system using
