--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-xubuntu-artwork (10.04.5) UNRELEASED; urgency=low
+xubuntu-artwork (10.04.5) lucid; urgency=low
 
   * xubuntu-plymouth-theme needs to depend on plymouth-label.
 
- -- Steve Langasek <steve.langasek@ubuntu.com>  Mon, 05 Apr 2010 07:31:56 +0000
+ -- Steve Langasek <steve.langasek@ubuntu.com>  Mon, 05 Apr 2010 08:00:11 +0000
 
 xubuntu-artwork (10.04.4) lucid; urgency=low
 
