--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,7 @@ xubuntu-artwork (10.10.0) UNRELEASED; urgency=low
     - drop pre-lucid conflicts.
   * debian/xubuntu-gdm-theme.postinst: dropped, was only pre-lucid code.
   * debian/copyright: cleaned.
+  * usr/share/pixmaps/xubuntu-logo.{png,svg}: use the new one.
 
  -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Fri, 20 Aug 2010 19:59:04 +0200
 
