--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xubuntu-artwork (10.10.1) UNRELEASED; urgency=low
+
+  * debian/xubuntu-artwork.install,usr/share/themes: include Zuki Blues.
+
+ -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Sun, 22 Aug 2010 20:31:15 +0200
+
 xubuntu-artwork (10.10.0) maverick; urgency=low
 
   * usr/share/themes/MurrinaStormCloud,debian/xubuntu-artwork.install:
