--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
 xubuntu-artwork (10.10.1) UNRELEASED; urgency=low
 
   * debian/xubuntu-artwork.install,usr/share/themes: include Zuki Blues.
-  * debian/control: xubuntu-artwork depends on gtk2-engines-equinox for this
-    new theme to work.
+  * debian/control:
+    - xubuntu-artwork depends on gtk2-engines-equinox for this
+      new theme to work
+    - updated the Vcs-Browser url for maverick
+    - renamed xubuntu-plymouth-theme to plymouth-theme-xubuntu-logo, which
+      provides plymouth-theme. lp: #553485
 
  -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Sun, 22 Aug 2010 20:31:15 +0200
 
