--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+xubuntu-artwork (10.10.2) UNRELEASED; urgency=low
+
+  * usr/share/xubuntu/xdg-gdm/xfce4/xfconf/xfce-perchannel-xml/xfwm4.xml: set
+    Bluebird theme for gdm as well.
+
+ -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Sat, 28 Aug 2010 18:18:48 +0200
+
 xubuntu-artwork (10.10.1) maverick; urgency=low
 
   * debian/xubuntu-artwork.install,usr/share/themes,
