--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,12 @@ xubuntu-artwork (10.10.2) UNRELEASED; urgency=low
 
   * usr/share/xubuntu/xdg-gdm/xfce4/xfconf/xfce-perchannel-xml/xfwm4.xml: set
     Bluebird theme for gdm as well.
+  * Pull Bluebird 0.1.2 bugfixes:
+    - Fixed Firefox menubar
+    - Fix Xfce application menu submenus. Make toolbar/statusbar text
+      larger (default size)
+    - Fix xfwm4 menu buttons
+    - Fix tooltip-style (optimizations regarding no/compositing).
 
  -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Sat, 28 Aug 2010 18:18:48 +0200
 
