--- a/debian/changelog
+++ b/debian/changelog
@@ -8,7 +8,8 @@ xubuntu-artwork (10.10.4) UNRELEASED; urgency=low
     - Tweak the inactive titlebar border
     - Smoothed out alt-tab theming.
   * usr/share/icons/elementaryXubuntu:
-    - Prevent elementaary from overridding the logo in the installer.
+    - Prevent elementary from overridding the logo in the installer
+    - Add missing symlinks for xfce4-mixer panel plugin.
 
  -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Fri, 10 Sep 2010 20:02:32 +0200
 
