--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ xubuntu-artwork (10.10.5) UNRELEASED; urgency=low
   * usr/share/icons/elementaryXubuntu: add more symlinks for a few xfce apps.
   * usr/share/pixmaps/xubuntu-logo-menu.svg: dropped, already available as
     xubuntu-logo.svg (menus use the same logo now).
+  * var/lib/gdm/.gconf.defaults/%gconf-tree.xml: do not use light monochrome
+    icons on the light gd panel.
 
  -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Sun, 12 Sep 2010 19:36:21 +0200
 
