--- a/debian/changelog
+++ b/debian/changelog
@@ -2,11 +2,13 @@ xubuntu-artwork (10.10.5) UNRELEASED; urgency=low
 
   * Pull Bluebird 0.3.1 bugfixes:
     - Make progressbars on the panel more visible.
+  * Pull Bluebird 0.3.2 bugfixes:
+    - Fix stick buttons, again.
   * usr/share/icons/elementaryXubuntu: add more symlinks for a few xfce apps.
   * usr/share/pixmaps/xubuntu-logo-menu.svg: dropped, already available as
     xubuntu-logo.svg (menus use the same logo now).
   * var/lib/gdm/.gconf.defaults/%gconf-tree.xml: do not use light monochrome
-    icons on the light gd panel.
+    icons on the light gdm panel.
 
  -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Sun, 12 Sep 2010 19:36:21 +0200
 
