--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-xubuntu-artwork (10.10.5) UNRELEASED; urgency=low
+xubuntu-artwork (10.10.5) maverick; urgency=low
 
   * Pull Bluebird 0.3.1 bugfixes:
     - Make progressbars on the panel more visible.
@@ -10,7 +10,7 @@ xubuntu-artwork (10.10.5) UNRELEASED; urgency=low
   * var/lib/gdm/.gconf.defaults/%gconf-tree.xml: do not use light monochrome
     icons on the light gdm panel.
 
- -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Sun, 12 Sep 2010 19:36:21 +0200
+ -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Wed, 15 Sep 2010 22:58:47 +0200
 
 xubuntu-artwork (10.10.4) maverick; urgency=low
 
