--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+xubuntu-artwork (10.10.6) UNRELEASED; urgency=low
+
+  * elementaryXubuntu: add missing un/pause and scores icons (used in
+    gnome-games). lp: #643694
+
+ -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Tue, 21 Sep 2010 23:43:17 +0200
+
 xubuntu-artwork (10.10.5) maverick; urgency=low
 
   * Pull Bluebird 0.3.1 bugfixes:
