--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-xubuntu-artwork (10.10.6) UNRELEASED; urgency=low
+xubuntu-artwork (10.10.6) maverick; urgency=low
 
   * elementaryXubuntu: add missing un/pause and scores icons (used in
     gnome-games). lp: #643694
 
- -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Tue, 21 Sep 2010 23:43:17 +0200
+ -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Wed, 22 Sep 2010 21:01:25 +0200
 
 xubuntu-artwork (10.10.5) maverick; urgency=low
 
