usr/share/themes/greybird: import greybird 0.2.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xubuntu-artwork (11.04.0) UNRELEASED; urgency=low
+
+  * usr/share/themes/greybird: import greybird 0.2.
+
+ -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Tue, 25 Jan 2011 22:46:29 +0100
+
 xubuntu-artwork (10.10.6) maverick; urgency=low
 
   * elementaryXubuntu: add missing un/pause and scores icons (used in
