--- a/debian/changelog
+++ b/debian/changelog
@@ -4,7 +4,7 @@ xubuntu-artwork (11.04.1) UNRELEASED; urgency=low
     debian/plymouth-theme-xubuntu-text.postinst,
     debian/plymouth-theme-xubuntu-text.postrm,
     lib/plymouth/themes/xubuntu-text/xubuntu-text.plymouth:
-    add a text theme.
+    add a text theme. lp: #613034
 
  -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Thu, 27 Jan 2011 20:02:09 +0100
 
