--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-xubuntu-artwork (11.04.1) UNRELEASED; urgency=low
+xubuntu-artwork (11.04.1) natty; urgency=low
 
   * debian/plymouth-theme-xubuntu-text.install,
     debian/plymouth-theme-xubuntu-text.postinst,
@@ -6,7 +6,7 @@ xubuntu-artwork (11.04.1) UNRELEASED; urgency=low
     lib/plymouth/themes/xubuntu-text/xubuntu-text.plymouth:
     add a text theme. lp: #613034
 
- -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Thu, 27 Jan 2011 20:02:09 +0100
+ -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Thu, 27 Jan 2011 20:48:22 +0100
 
 xubuntu-artwork (11.04.0) natty; urgency=low
 
