--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xubuntu-artwork (11.04.2) UNRELEASED; urgency=low
+
+  * var/lib/gdm/.gconf.defaults/%gconf-tree.xml: set default theme to greybird.
+
+ -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Sat, 29 Jan 2011 14:38:15 +0100
+
 xubuntu-artwork (11.04.1) natty; urgency=low
 
   * debian/plymouth-theme-xubuntu-text.install,
