--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xubuntu-artwork (11.04.3) UNRELEASED; urgency=low
+
+  * usr/share/xubuntu/gdm.sh: use the correct path to xfconfd.
+
+ -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Fri, 11 Mar 2011 19:55:30 +0100
+
 xubuntu-artwork (11.04.2) natty; urgency=low
 
   * var/lib/gdm/.gconf.defaults/%gconf-tree.xml: set default theme to greybird.
