--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,8 @@ xubuntu-artwork (11.04.3) UNRELEASED; urgency=low
     gdm, now that greybird is fixed.
   * usr/share/themes/greybird: updated to latest git (48be079), contains
     various bugfixes for xfce4-panel, xfce4-notifyd, gdm, etc.
+  * usr/share/xubuntu/xdg-gdm/xfce4/xfconf/…/xfwm4.xml: set greybird as
+    default xfwm4 theme for gdm too.
 
  -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Fri, 11 Mar 2011 19:55:30 +0100
 
