--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xubuntu-artwork (11.04.4) UNRELEASED; urgency=low
+
+  * usr/share/xfce4/backdrops/*jaunty*: dropped.
+
+ -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Sun, 13 Mar 2011 16:43:54 +0100
+
 xubuntu-artwork (11.04.3) natty; urgency=low
 
   * usr/share/xubuntu/gdm.sh: use the correct path to xfconfd.
