--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-xubuntu-artwork (11.04.5) UNRELEASED; urgency=low
+xubuntu-artwork (11.04.5) natty; urgency=low
 
   * Updated greybird to latest git (135856b) to get more bugfixes.
   * usr/share/xfce4/backdrops:
@@ -7,7 +7,7 @@ xubuntu-artwork (11.04.5) UNRELEASED; urgency=low
   * var/lib/gdm/.gconf.defaults/%gconf-tree.xml: set the new wallpaper by
     default.
 
- -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Fri, 18 Mar 2011 20:54:28 +0100
+ -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Fri, 18 Mar 2011 22:10:46 +0100
 
 xubuntu-artwork (11.04.4) natty; urgency=low
 
