--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+xubuntu-artwork (11.04.8) UNRELEASED; urgency=low
+
+  * usr/share/gmusicbrowser/pix/elementary/gmusicbrowser.png: ship the same
+    one as elementaryXubuntu, for consistency.
+
+ -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Thu, 24 Mar 2011 20:33:13 +0100
+
 xubuntu-artwork (11.04.7) natty; urgency=low
 
   * Copy the changes from kubuntu-default-settings 1:11.04ubuntu9…
