--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,8 @@
 xubuntu-artwork (11.04.8) UNRELEASED; urgency=low
 
-  * usr/share/gmusicbrowser/pix/elementary/gmusicbrowser.png: ship the same
-    one as elementaryXubuntu, for consistency.
+  * usr/share/gmusicbrowser/pix/elementary/gmusicbrowser.png,
+    debian/xubuntu-artwork.install: ship the same one as elementaryXubuntu,
+    for consistency.
 
  -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Thu, 24 Mar 2011 20:33:13 +0100
 
