--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+xubuntu-artwork (11.04.9) UNRELEASED; urgency=low
+
+  * Update elementaryXubuntu to include some missing icons (gdm, panel plugins).
+  * debian/copyright: refreshed for natty.
+
+ -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Thu, 07 Apr 2011 20:19:28 +0200
+
 xubuntu-artwork (11.04.8) natty; urgency=low
 
   * usr/share/gmusicbrowser/pix/elementary/gmusicbrowser.png,
