--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+xubuntu-artwork (11.10.1) UNRELEASED; urgency=low
+
+  * debian/control: Drop xubuntu-gdm-theme package
+  * Drop debian/xubuntu-gdm-theme*
+
+ -- Micah Gersten <micahg@ubuntu.com>  Tue, 07 Jun 2011 04:51:29 -0500
+
 xubuntu-artwork (11.04.9) natty; urgency=low
 
   * Update elementaryXubuntu to include some missing icons (gdm, panel plugins).
