--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+xubuntu-artwork (11.10.1) UNRELEASED; urgency=low
+
+  * lib/plymouth/themes/xubuntu-text/xubuntu-text.plymouth: update for
+    oneiric. lp: #813267
+
+ -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Mon, 25 Jul 2011 15:17:44 +0200
+
 xubuntu-artwork (11.10.0) oneiric; urgency=low
 
   * debian/control: Drop xubuntu-gdm-theme package
