--- a/debian/changelog
+++ b/debian/changelog
@@ -5,7 +5,7 @@ xubuntu-artwork (11.10.1) UNRELEASED; urgency=low
   * Drop bluebird and greybird themes, move murrine-themes from recommends
     to depends.
   * Bumped murrine-themes to (>> 0.98.2) as they include bluebird and
-    greybird.
+    greybird, and handle replaces/breaks correctly.
 
  -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Mon, 25 Jul 2011 15:17:44 +0200
 
