--- a/debian/changelog
+++ b/debian/changelog
@@ -4,8 +4,9 @@ xubuntu-artwork (11.10.1) UNRELEASED; urgency=low
     oneiric. lp: #813267
   * Drop bluebird and greybird themes, move murrine-themes from recommends
     to depends.
-  * Bumped murrine-themes to (>> 0.98.2) as they include bluebird and
+  * Bumped murrine-themes to (>= 0.98.2) as they include bluebird and
     greybird, and handle replaces/breaks correctly.
+  * usr/share/gdm: dropped, forgotten by the previous upload.
 
  -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Mon, 25 Jul 2011 15:17:44 +0200
 
