--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-xubuntu-artwork (11.10.2) UNRELEASED; urgency=low
+xubuntu-artwork (11.10.2) oneiric; urgency=low
 
-  * lib/plymouth: update xubuntu-logo for oneiric as well.
+  * lib/plymouth: update xubuntu-logo for oneiric as well. lp: #775392
   * debian/copyright: clean up references to dropped files.
 
- -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Sat, 20 Aug 2011 17:55:30 +0200
+ -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Sat, 20 Aug 2011 19:00:29 +0200
 
 xubuntu-artwork (11.10.1) oneiric; urgency=low
 
