--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xubuntu-artwork (11.10.3) UNRELEASED; urgency=low
+
+  * debian/control: drop breaks/replaces, it's in murrine-themes.
+
+ -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Sun, 21 Aug 2011 12:39:02 +0200
+
 xubuntu-artwork (11.10.2) oneiric; urgency=low
 
   * lib/plymouth: update xubuntu-logo for oneiric as well. lp: #775392
