--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xubuntu-artwork (11.10.4) UNRELEASED; urgency=low
+
+  * lib/plymouth/themes/xubuntu-logo/xubuntu-logo.script: fix typo. lp: #833833
+
+ -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Fri, 09 Sep 2011 21:51:02 +0200
+
 xubuntu-artwork (11.10.3) oneiric; urgency=low
 
   * debian/control: drop breaks/replaces, it's in murrine-themes.
