--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,14 @@
 xubuntu-artwork (12.04.0) UNRELEASED; urgency=low
 
+  [ Lionel Le Folgoc ]
   * lib/plymouth/themes/xubuntu-text/xubuntu-text.plymouth: update for
     precise. lp: #900366
 
- -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Sat, 07 Jan 2012 16:01:10 +0100
+  [ Simon Steinbeiss ]
+  * /usr/share/icons/elementary-xfce: add elementary-xfce icon theme (fork of elementary-icon-theme) and add xfce-specific icons
+  * /usr/share/xfce4/backdrops: replace identical wallpapers by symlinks to save space 
+
+ -- Simon Steinbeiss <ochosi@hana>  Mon, 16 Jan 2012 12:31:10 +0100
 
 xubuntu-artwork (11.10.4) oneiric; urgency=low
 
