--- a/debian/changelog
+++ b/debian/changelog
@@ -5,9 +5,12 @@ xubuntu-artwork (12.04.0) UNRELEASED; urgency=low
     precise. lp: #900366
 
   [ Simon Steinbeiss ]
-  * /usr/share/icons/elementary-xfce: add elementary-xfce icon theme (fork of elementary-icon-theme) and add xfce-specific icons
-  * /usr/share/icons/elementary-xfce-dark: addon for dark panels (merge of elementaryXubuntu and elementary-mono-dark)
-  * /usr/share/xfce4/backdrops: replace identical wallpapers by symlinks to save space 
+  * /usr/share/icons/elementary-xfce: add elementary-xfce icon theme (based on
+    elementary-icon-theme) and add xfce-specific icons
+  * /usr/share/icons/elementary-xfce-dark: addon for dark panels (merge of
+    elementaryXubuntu and elementary-mono-dark)
+  * /usr/share/xfce4/backdrops: replace identical wallpapers by symlinks to
+    save space
   * debian/control: drop elementary-icon-theme dependency
 
  -- Simon Steinbeiss <ochosi@shimmerproject.org>  Mon, 16 Jan 2012 15:40:15 +0100
