--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-xubuntu-artwork (12.04.1) UNRELEASED; urgency=low
+xubuntu-artwork (12.04.1) precise; urgency=low
 
   * usr/share/icons: refreshed,
     - add some missing icons used by xfce4-settings and the panel/desktop menu.
@@ -7,7 +7,7 @@ xubuntu-artwork (12.04.1) UNRELEASED; urgency=low
     - "Ubuntu Software Center & Synaptic have the same icon in Xubuntu"
       lp: #883513
 
- -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Mon, 06 Feb 2012 17:52:12 +0100
+ -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Mon, 13 Feb 2012 21:49:52 +0100
 
 xubuntu-artwork (12.04.0) precise; urgency=low
 
