--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-xubuntu-artwork (12.04.2) UNRELEASED; urgency=low
+xubuntu-artwork (12.04.2) precise; urgency=low
 
   * debian/control: depends on shimmer-themes instead of all murrine-themes.
   * Fix missing icons for orage_globaltime.
   * Include the new precise wallpapers.
 
- -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Sun, 19 Feb 2012 11:27:41 +0100
+ -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Sun, 19 Feb 2012 13:15:14 +0100
 
 xubuntu-artwork (12.04.1) precise; urgency=low
 
