--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xubuntu-artwork (12.04.3) UNRELEASED; urgency=low
+
+  * Fix symbolic icons in elementary-xfce. lp: #939488
+
+ -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Thu, 23 Feb 2012 19:34:21 +0100
+
 xubuntu-artwork (12.04.2) precise; urgency=low
 
   * debian/control: depends on shimmer-themes instead of all murrine-themes.
