--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-xubuntu-artwork (12.04.3) UNRELEASED; urgency=low
+xubuntu-artwork (12.04.3) precise; urgency=low
 
   * Fix symbolic icons in elementary-xfce. lp: #939488
   * Let elementaryXubuntu inherit from elementary-xfce-dark so people upgrading
@@ -6,7 +6,7 @@ xubuntu-artwork (12.04.3) UNRELEASED; urgency=low
   * Update the background image of the plymouth theme, it was still using the
     oneiric one.
 
- -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Thu, 23 Feb 2012 19:34:21 +0100
+ -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Thu, 23 Feb 2012 20:13:18 +0100
 
 xubuntu-artwork (12.04.2) precise; urgency=low
 
